guestbook-test/templates/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  namespace: guestbook
  annotations:
   # cert-manager.io/cluster-issuer: "letsencrypt-prod"  # Určitý Issuer pro Let's Encrypt
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Přesměrování HTTP na HTTPS
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: test.intedo.cz  # Nahraďte svou doménou
      http:
        paths:
          - path: /guestbook
            pathType: Prefix
            backend:
              service:
                name: guestbook
                port:
                  number: 80
  tls:
    - hosts:
        - test.intedo.cz # Nahraďte svou doménou
      secretName: servicedesk-tls  # Název tajného klíče pro certifikát Let's Encrypt
